cmake_minimum_required(VERSION 2.8.9)
project(glsandbox)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++1y -Wall -Wextra -Werror")

include_directories(lib/glfw3/include/)
link_directories(lib/glfw3/lib/)
link_directories(lib/googletest/lib/)
include_directories(lib/googletest/include)
include_directories(lib/glm/include/)
include_directories(lib/nlohmann-json/include/)
include_directories(lib/googletest/include/)
include_directories(lib/assimp/include/)
link_directories(lib/assimp/lib/)
add_library(GLEW_1130 STATIC lib/glew-1.13.0/src/glew.c)
include_directories(lib/glew-1.13.0/include)
include_directories (./)
include_directories(glsandbox/include)
include_directories(lib/free_image/include)
link_directories(lib/free_image/lib/)
add_subdirectory (glsandbox)
add_subdirectory (samples)
add_subdirectory (test)
